ROS2_Foxy/log/build_2024-11-01_05-46-28/fair_drip/stderr.log
  File "/root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/python3.8/site-packages/fair_drip/Ros2_Listener_Robot.py", line 310
    await asyncio.sleep(1)  # 비동기적으로 1초 대기
    ^
SyntaxError: 'await' outside async function

